# Bancomat

./: ATM.cpp  ATM.h  CMakeLists.txt  Collection.cpp  Collection.h  List.h  Node.h  RepositoryCollection.cpp  RepositoryCollection.h  TestList.cpp  TestList.h  Tranzactie.cpp  Tranzactie.h  VectorDinamic.cpp  VectorDinamic.h  main.cpp
